--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ configurations {
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0'
+    compile 'me.lucko.luckperms:luckperms-api:4.3'
     shade 'mysql:mysql-connector-java:8.0.12'
     shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile files('libs/av2.jar')
