--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0'
     compile 'me.lucko.luckperms:luckperms-api:4.3'
     compile "com.crowsofwar.avatar:avatarmod:1.5.15-alpha"
+    compile "me.ryanhamshire:griefprevention:1.12.2-4.3.0.630:api"
 
     shade 'mysql:mysql-connector-java:8.0.12'
     shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
