--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     compile 'me.lucko.luckperms:luckperms-api:4.3'
     compile "com.crowsofwar.avatar:avatarmod:1.5.15-alpha"
     compile ("me.ryanhamshire:griefprevention:1.12.2-4.3.0.630:api") {exclude group: 'org.bstats', module: 'bstats-sponge'}
-    compile "io.github.nucleuspowered:nucleus-api:1.11.0-S7.1"
+    compile "io.github.nucleuspowered:nucleus-api:1.12.0-SNAPSHOT-S7.1"
 
     shade 'mysql:mysql-connector-java:8.0.12'
     shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
