--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 */
+
+subprojects {
+    apply plugin: 'java'
+    version = '1.0'
+    
+    def env = System.getenv()
+    if (env.BUILD_NUMBER) {
+        version = version + "-" + "${env.BUILD_NUMBER}"
+    }
+}
