--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile ("me.ryanhamshire:griefprevention:1.12.2-4.3.0.630:api") {exclude group: 'org.bstats', module: 'bstats-sponge'}
     compile "io.github.nucleuspowered:nucleus-api:1.12.0-SNAPSHOT-S7.1"
 
+    shade group: 'redis.clients', name: 'jedis', version: '3.1.0-m3'
     shade 'mysql:mysql-connector-java:8.0.12'
     shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
