--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compileOnly 'com.velocitypowered:velocity-api:1.0.2-SNAPSHOT'
 
     shade group: 'redis.clients', name: 'jedis', version: '3.1.0-m3'
+    shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
     shade ('net.dv8tion:JDA:4.BETA.0_24') {
         exclude module: 'opus-java'
