--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     shade group: 'redis.clients', name: 'jedis', version: '3.1.0-m3'
     shade group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     shade group: 'org.sql2o', name: 'sql2o', version: '1.6.0'
+    shade 'mysql:mysql-connector-java:8.0.12'
 
     shade ('net.dv8tion:JDA:4.BETA.0_24') {
         exclude module: 'opus-java'
