--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -47,7 +47,7 @@ jar {
 uploadArchives {
     repositories {
        mavenDeployer {
-             repository(url: "http://www.altillimity.com/nexus/content/repositories/releases") {
+             repository(url: "https://maven.altillimity.com/content/repositories/releases") {
              authentication(userName: mavenUser, password: mavenPassword)
 	    }
              pom.version = "$version-1.0.x"
